# prism-lab

./: .gitignore  README.md  pyproject.toml
demo/: rasterization.ipynb
src/prism/: __init__.py  preset.py
src/prism/app/: __init__.py  control.py  engine.py  state.py
src/prism/canvas/: __init__.py  canvas.py  composite.py  layer.py  reference.py  render.py  style.py  tool.py
src/prism/color/: __init__.py  adjust.py  palette.py  value.py
src/prism/design/: __init__.py  brush.py  paint.py  segment.py  style.py
src/prism/form/: __init__.py  geometric.py  primitive.py  region.py  stipple.py  tonal.py
src/prism/layer/: __init__.py  adjustment.py  base.py  paint.py  raster.py
src/prism/paint/: __init__.py  brush.py  engine.py  ground.py  mask.py  region.py  style.py  underpaint.py
src/prism/raster/: __init__.py  geometric.py  region.py  stipple.py  style.py  tonal.py
